// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton renders label and value 1`] = `
<button
  className="MuiButtonBase-root-21 MuiButton-root-5 MuiButton-raised-11 ActionButton-raised-1"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-6 ActionButton-label-2"
  >
    <span
      className="MuiTypography-root-24 MuiTypography-button-35 ActionButton-caption-3"
    >
      Label
    </span>
    <span
      className="MuiTypography-root-24 MuiTypography-caption-34 ActionButton-value-4"
    >
      Value
    </span>
  </span>
  <span
    className="MuiTouchRipple-root-48"
  />
</button>
`;

exports[`ActionButton renders with no props 1`] = `
<button
  className="MuiButtonBase-root-21 MuiButton-root-5 MuiButton-raised-11 ActionButton-raised-1"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-6 ActionButton-label-2"
  >
    <span
      className="MuiTypography-root-24 MuiTypography-button-35 ActionButton-caption-3"
    />
    <span
      className="MuiTypography-root-24 MuiTypography-caption-34 ActionButton-value-4"
    />
  </span>
  <span
    className="MuiTouchRipple-root-48"
  />
</button>
`;
